src/main/java/com/example/task/management/application/error/entity/ErrorResponse.java
package com.example.task.management.application.error.entity;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.http.HttpStatus;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class ErrorResponse {

    private String message;
    private HttpStatus code;
}
